Modifier panel panel expansion RNA property always returns true if subpanels are expanded #78902

Closed
opened 2020-07-14 00:48:16 +02:00 by Adrian Rutkowski · 6 comments

System Information
win 10

Blender Version
Broken: 2.90 ee5c2f6ead after new modifier panels

Short description of error

In python API for ARRAY modifier show_expanded returns always True it is ok for all other mods (returning False when closed)

Exact steps for others to reproduce the error

to replicate print show_expanded result in the console when ARRAY modifier panel is closed and opened

Results for ARRAY:
blender_2020-07-14_00-39-01.png

blender_2020-07-14_00-37-58.png

Results for other mods:

blender_2020-07-14_00-40-04.png

blender_2020-07-14_00-39-46.png

**System Information** win 10 **Blender Version** Broken: 2.90 ee5c2f6ead37 after new modifier panels **Short description of error** In python API for ARRAY modifier show_expanded returns always True it is ok for all other mods (returning False when closed) **Exact steps for others to reproduce the error** to replicate print show_expanded result in the console when ARRAY modifier panel is closed and opened Results for ARRAY: ![blender_2020-07-14_00-39-01.png](https://archive.blender.org/developer/F8692366/blender_2020-07-14_00-39-01.png) ![blender_2020-07-14_00-37-58.png](https://archive.blender.org/developer/F8692368/blender_2020-07-14_00-37-58.png) Results for other mods: ![blender_2020-07-14_00-40-04.png](https://archive.blender.org/developer/F8692370/blender_2020-07-14_00-40-04.png) ![blender_2020-07-14_00-39-46.png](https://archive.blender.org/developer/F8692372/blender_2020-07-14_00-39-46.png)

Added subscriber: @niewinny

Added subscriber: @niewinny
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Good find. Internally this property stores whether all of the subpanels are open or not, and right now it returns whether any of them are open rather than just the first.

I was debating whether or not to change the modifier expansion property to an array so you could control all subpanels. Maybe it's best to just add another property for the subpanels.

Anyway, I'll change this property to just use the expansion of the first panel, that's a regression.

Good find. Internally this property stores whether all of the subpanels are open or not, and right now it returns whether any of them are open rather than just the first. I was debating whether or not to change the modifier expansion property to an array so you could control all subpanels. Maybe it's best to just add another property for the subpanels. Anyway, I'll change this property to just use the expansion of the first panel, that's a regression.
Hans Goudey changed title from In python API ARRAY modifier show_expanded returns True even when panel is closed to Modifier panel panel expansion RNA property always returns true if subpanels are expanded 2020-07-14 01:49:57 +02:00

This issue was referenced by b818f6b55f

This issue was referenced by b818f6b55ff0cd13445917715591d8eb38130c82
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Hans Goudey self-assigned this 2020-07-14 02:10:59 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#78902
No description provided.